# butia_vision

./: .gitignore  .gitmodules  Dockerfile  README.md  build.sh  butia_vision.repos  entrypoint.sh  frames.gv  install.sh  push.sh  requirements.txt  run.sh
butia_grasp_generator/: package.xml
butia_manipulation_utilities/: CMakeLists.txt  package.xml
butia_manipulation_utilities/scripts/: __init__.py
butia_recognition/: CMakeLists.txt  command  package.xml  setup.py
butia_recognition/config/: face_rec.yaml  face_rec_BACKUP_25160.yaml  fast-sam.yaml  grounded_sam_object_recognition_test.yaml  object_recognition-old.yaml  object_recognition-sim.yaml  object_recognition_coke.yaml  object_recognition_larc2021_real.yaml  object_recognition_larc2022_real.yaml  owl_vit.yaml  paligemma_object_recognition.yaml  robocup_2024.yaml  test.yaml  yolo_face_tracker_recognition.yaml  yolo_tracker_bag_recognition.yaml  yolo_tracker_recognition.yaml  yolo_tracker_storing_groceries_bordeaux23.yaml  yolov5_generic.yaml  yolov5_object_detection .yaml  yolov5_objects_lab.yaml  yolov5_people_detection.yaml  yolov8_bag_recognition.yaml  yolov8_object_recognition.yaml  yolov8_object_recognition_custom.yaml  yolov8_worldv2_object_recognition.yaml
butia_recognition/launch/: face_rec.launch  grounded_sam_recognition.launch  object_recognition.launch  owl_vit.launch  owl_vit_recognition.launch  paligemma_object_recognition.launch  yolo_tracker_recognition.launch  yolov5_object_detection.launch  yolov5_people_detection.launch  yolov5_people_tracking.launch  yolov5_recognition.launch  yolov8_bag_recognition.launch  yolov8_object_recognition.launch
butia_recognition/rviz/: butia_recognition.rviz  test_gesture_detection.rviz
butia_recognition/scripts/: butia_recognition_pytorch_node.py  butia_recognition_pytorch_node_v8.py  owl_vit_node.py
butia_vision_bridge/: CMakeLists.txt  README.md  package.xml  setup.py
butia_vision_bridge/config/: butia_vision_bridge.yaml  ros.kinect2.yaml  ros.yaml
butia_vision_bridge/launch/: butia_vision_bridge.launch
butia_vision_bridge/scripts/: butia_vision_bridge_node.py
butia_vision_bridge/src/: butia_vision_bridge.cpp  butia_vision_bridge_node.cpp
butia_vision_msgs/: CMakeLists.txt  README.md  package.xml
butia_vision_msgs/msg/: BoundingBox.msg  Description3D.msg  Recognitions3D.msg
butia_vision_msgs/srv/: FaceClassifierTraining.srv  ImageRequest.srv  ListClasses.srv  PeopleIntroducing.srv  SegmentationRequest.srv
deprecated/image2kinect/: CMakeLists.txt  package.xml
doris_cam/: CMakeLists.txt  package.xml
doris_cam/include/: cam_config.h
doris_cam/includes/: cam_config.hpp
doris_cam/src/: cam_config.cpp  doris_cam_node.cpp
image2kinect/: CMakeLists.txt  README.md  package.xml
image2kinect/config/: image2kinect.yaml  ros.yaml
image2kinect/data/: 002_master_chef_can.pcd  002_master_chef_can.ply  003_cracker_box.pcd  003_cracker_box.ply  004_sugar_box.pcd  004_sugar_box.ply  005_tomato_soup_can.pcd  005_tomato_soup_can.ply  006_mustard_bottle.pcd  006_mustard_bottle.ply  007_tuna_fish_can.pcd  007_tuna_fish_can.ply  008_pudding_box.pcd  009_gelatin_box.pcd  009_gelatin_box.ply  010_potted_meat_can.pcd  011_banana.pcd  011_banana.ply  012_strawberry.pcd  012_strawberry.ply  013_apple.pcd  013_apple.ply  014_lemon.pcd  014_lemon.ply  015_peach.pcd  015_peach.ply  016_pear.pcd  017_orange.pcd  018_plum.pcd  018_plum.ply  019_pitcher_base.pcd  021_bleach_cleanser.pcd  022_windex_bottle.pcd  022_windex_bottle.ply  024_bowl.pcd  025_mug.pcd  025_mug.ply  026_sponge.pcd  027_skillet.pcd  028_skillet_lid.pcd  (+197 more)
image2kinect/launch/: image2kinect.launch
image2kinect/src/: image2kinect.cpp  image2kinect_node.cpp
image2world/: CMakeLists.txt  package.xml
image2world/scripts/: image2world_node.py
image2world/src/: image2world.cpp  image2world_node.cpp
image_server/: CMakeLists.txt  README.md  package.xml
image_server/config/: ros.yaml
image_server/launch/: image_server.launch
image_server/src/: image_server.cpp  image_server_node.cpp
img_server/: CMakeLists.txt  package.xml
img_server/include/: img_server.hpp  img_server_cfg.hpp
img_server/src/: img_server.cpp  img_server_node.cpp
instance_segmentation/: CMakeLists.txt  package.xml
instance_segmentation/config/: ros.yaml
instance_segmentation/launch/: mask_rcnn.launch
instance_segmentation/scripts/: instance_segmentation_node.py
object_recognition/: CMakeLists.txt  README.md  package.xml
object_recognition/config/: editando.txt  object_recognition-sim.yaml  object_recognition.yaml  object_recognition_larc2021_real.yaml  ros.yaml
object_recognition/launch/: object_recognition_base.launch  yolo_tiny_v3.launch  yolo_v3.launch  yolo_v4.launch  yolov4-simulator-foods.launch  yolov4-simulator.launch
object_recognition/scripts/: object_recognition_node.py  people_detection_node.py
object_recognition/src/: darknet_ros.cpp  object_recognition_node.cpp  yolo_node.cpp  yolo_recognition.cpp
people_tracking/: CMakeLists.txt  README.md  package.xml
people_tracking/config/: people_tracking.yaml  ros.yaml
people_tracking/include/: people_tracking.hpp
people_tracking/launch/: people_tracking.launch
people_tracking/scripts/: people_tracking_node.py
people_tracking/src/: people_tracking.cpp  people_tracking_node.cpp
segmentation/: CMakeLists.txt  README.md  package.xml
segmentation/config/: ros.yaml  segmentation.yaml
segmentation/include/: segmentation.hpp
segmentation/launch/: segmentation.launch
segmentation/src/: segmentation.cpp
shelf_detection/: CMakeLists.txt  README.md  package.xml
shelf_detection/launch/: shelf_detection.launch
shelf_detection/scripts/: shelf_detection_node.py
vision_system_bridge/: CMakeLists.txt  README.md  package.xml
vision_system_bridge/config/: ros.yaml
vision_system_bridge/include/: vision_system_bridge.h
vision_system_bridge/launch/: vision_system_bridge.launch
vision_system_bridge/src/: vision_system_bridge.cpp  vision_system_bridge_node.cpp
vision_system_msgs/: CMakeLists.txt  README.md  package.xml
(+311 files in other folders)
