<?xml version="1.0"?>
<package format="2">
  <name>butia_manipulation_utilities</name>
  <version>0.0.0</version>
  <description>The butia_manipulation_utilities package</description>

  <maintainer email="gdorneles@todo.todo">gdorneles</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <depend>cv_bridge</depend>
  <depend>butia_vision_msgs</depend>
  <depend>butia_vision_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>

  </export>
</package>
