<?xml version="1.0"?>
<package format="2">
  <name>butia_recognition</name>
  <version>0.0.0</version>
  <description>The butia_recognition_pytorch package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="igormaurell@furg.br">Igor Maurell</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>rospy</exec_depend>
  <depend>cv_bridge</depend>
  <depend>butia_vision_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
