<?xml version="1.0"?>
<package format="2">
  <name>image_server</name>
  <version>0.0.0</version>
  <description>The image_server package</description>


  <maintainer email="igormaurell@furg.br">Igor Maurell</maintainer>
  <maintainer email="migueldossantosmartins@gmail.com">Miguel Martins</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>vision_system_msgs</build_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>vision_system_msgs</build_export_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>vision_system_msgs</exec_depend>


</package>
