<?xml version="1.0"?>
<package format="2">
  <name>people_tracking</name>
  <version>1.0.0</version>
  <description>The people_tracking package is used for the "Follow Me" task.</description>

  <maintainer email="igormaurell@furg.br">Igor Maurell</maintainer>
  <maintainer email="migueldossantos@furg.br">Miguel dos Santos</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>vision_system_msgs</depend>
  <depend>img_server</depend>
  <depend>cv_bridge</depend>

  <exec_depend>message_runtime</exec_depend>

  <export></export>
</package>
