<?xml version="1.0"?>
<package format="2">
  <name>segmentation</name>
  <version>1.0.0</version>
  <description>This package provides the image segmentation service.</description>

  <maintainer email="migueldossantos@furg.br">Miguel dos Santos</maintainer>

  <license>FURG</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>vision_system_msgs</depend>
  <depend>img_server</depend>
  <depend>cv_bridge</depend>

  <export></export>
</package>
