<?xml version="1.0"?>
<package format="2">
  <name>vision_system_bridge</name>
  <version>1.0.0</version>
  <description>The vision_system_bridge package</description>

  <maintainer email="migueldossantos@furg.br">Miguel dos Santos</maintainer>
  <maintainer email="igormaurell@furg.br">Igor Maurell</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>vision_system_msgs</depend>
  <depend>message_filters</depend>
  <depend>image_transport</depend>
     
  <export></export>
</package>
