<?xml version="1.0"?>
<package format="2">
  <name>image2kinect</name>
  <version>0.0.0</version>
  <description>The image2kinect package</description>


  <maintainer email="igormaurell@furg.br">Igor Maurell</maintainer>
  <maintainer email="miguelmartinsdossantos@gmail.com">Miguel Martins</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>butia_vision_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>pcl_ros</depend>


  <export>


  </export>
</package>
